--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('images.jpg');
+    background-image: url('MoyComiendo.jpeg');
     background-position: center;
 
 }
